CREATE TABLE "lecturer" (
  "lecturer_id" SERIAL PRIMARY KEY,
  "name_th" varchar(255) NOT NULL,
  "name_en" varchar(255),
  "rank" varchar(100),
  "profile_image_url" text,
  "office" varchar(255),
  "phone" varchar(50),
  "phone_extension" varchar(50),
  "email" varchar(255) UNIQUE NOT NULL,
  "cv_url" text,
  "created_at" timestamptz DEFAULT (now()),
  "updated_at" timestamptz DEFAULT (now()),
  "is_active" boolean NOT NULL DEFAULT true
);

CREATE TABLE "education" (
  "education_id" SMALLINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "lecturer_id" uuid NOT NULL,
  "degree" varchar(100),
  "field" varchar(255),
  "institution" varchar(500),
  "country" varchar(100),
  "graduation_year" varchar(10)
);

CREATE TABLE "research_interest" (
  "research_interest_id" SMALLINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar(255) UNIQUE NOT NULL
);

CREATE TABLE "faculty_research_interest" (
  "lecturer_id" uuid NOT NULL,
  "research_interest_id" smallint NOT NULL,
  PRIMARY KEY ("lecturer_id", "research_interest_id")
);

CREATE TABLE "expertise" (
  "expertise_id" SMALLINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "description" text NOT NULL
);

CREATE TABLE "faculty_expertise" (
  "lecturer_id" uuid NOT NULL,
  "expertise_id" smallint NOT NULL,
  PRIMARY KEY ("lecturer_id", "expertise_id")
);

CREATE TABLE "publication" (
  "publication_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "title" text NOT NULL,
  "publication_year" smallint,
  "venue" text,
  "volume" varchar(50),
  "pages" varchar(50),
  "doi" varchar(255) UNIQUE,
  "citation_text" text,
  "created_at" timestamptz DEFAULT (now())
);

CREATE TABLE "faculty_publication" (
  "lecturer_id" uuid NOT NULL,
  "publication_id" int NOT NULL,
  "author_order" smallint,
  PRIMARY KEY ("lecturer_id", "publication_id")
);

CREATE TABLE "publication_profile" (
  "publication_profile_id" SMALLINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "lecturer_id" uuid NOT NULL,
  "provider" varchar(100) NOT NULL,
  "url" text NOT NULL
);

CREATE UNIQUE INDEX ON "publication_profile" ("lecturer_id", "provider", "url");

ALTER TABLE "education" ADD FOREIGN KEY ("lecturer_id") REFERENCES "lecturer" ("lecturer_id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "faculty_research_interest" ADD FOREIGN KEY ("lecturer_id") REFERENCES "lecturer" ("lecturer_id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "faculty_research_interest" ADD FOREIGN KEY ("research_interest_id") REFERENCES "research_interest" ("research_interest_id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "faculty_expertise" ADD FOREIGN KEY ("lecturer_id") REFERENCES "lecturer" ("lecturer_id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "faculty_expertise" ADD FOREIGN KEY ("expertise_id") REFERENCES "expertise" ("expertise_id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "faculty_publication" ADD FOREIGN KEY ("lecturer_id") REFERENCES "lecturer" ("lecturer_id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "faculty_publication" ADD FOREIGN KEY ("publication_id") REFERENCES "publication" ("publication_id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "publication_profile" ADD FOREIGN KEY ("lecturer_id") REFERENCES "lecturer" ("lecturer_id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;
